# desktop-pet

./: .gitignore  chat.html  guide.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
assets/: idle_phrases.toml
assets/characters/default/: character.toml
assets/characters/donghae/: character.toml
docs/: DEVELOPMENT.md
docs/superpowers/plans/: 2026-05-05-desktop-pet-plan.md  2026-05-08-chat-history-daily-log-plan.md  2026-05-08-draggable-input-overlay-plan.md
docs/superpowers/specs/: 2026-05-05-desktop-pet-design.md  2026-05-08-draggable-input-overlay-design.md
src/: i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_menu.rs  character.rs  commands.rs  config.rs  daily_log.rs  i18n.rs  installer.rs  lib.rs  main.rs  session.rs  setup.rs  tray.rs
src-tauri/src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
src/hooks/: usePetAnimation.ts  usePetMovement.ts  useSessionSync.ts
src/locales/: en.json  zh-TW.json
src/stores/: petStore.ts  sessionStore.ts  settingsStore.ts
src/types/: character.ts  session.ts  settings.ts
src/windows/chat/: ChatApp.tsx  MessageList.tsx  main.tsx
src/windows/guide/: GuideApp.tsx  main.tsx
src/windows/pet/: InputOverlay.tsx  PetApp.tsx  PetCharacter.tsx  SpeechBubble.tsx
src/windows/settings/: SettingsApp.tsx  main.tsx
src/windows/settings/tabs/: Animation.tsx  CliConfig.tsx  General.tsx  Movement.tsx
tests/: SpeechBubble.test.tsx  sessionStore.test.ts  setup.ts  usePetAnimation.test.ts  usePetMovement.test.ts
